# system-monitor

./: .gitignore  LICENSE  README.md  build.py  main.spec  pyproject.toml  requirements.txt
mnt_src/: main.py
mnt_src/ui/: app.py
